--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 .login_div{
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 10px;
@@ -22,7 +22,9 @@ body {
     background-color:#2A8386;
     color:#f9f9f9;
     border-radius: 12px;
+    border: none;
 }
+
 .div2 {
     color: white;
     display: flex;
